Fixed some spacing issues.

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -28,6 +28,7 @@
   width: 100%;
   text-align: left;
   vertical-align: top;
+  
 }
 
 .music-table-row{
@@ -40,11 +41,13 @@
 }
 
 .music-table-song-titles {
-  width: 100px;
+  width: 150px;
+  padding-right:10px;
 }
 
 .music-table-pseudonym {
-  width: 100px;
+  width: 150px;
+  padding-right:10px;
 }
 
 .profile-picture {
